@@ -1,3 +1,13 @@
+2011-09-27  Roland McGrath  <roland@hack.frob.com>
+
+	[BZ #13226]
+	* manual/signal.texi (Longjmp in Handler): Grammar fixes.
+
+2011-09-27  Andreas Schwab  <schwab@redhat.com>
+
+	* nss/nss_files/files-initgroups.c (_nss_files_initgroups_dyn):
+	Reread the line before reparsing it.
+
 2011-09-26  Andreas Schwab  <schwab@redhat.com>
 
 	* sysdeps/x86_64/fpu/bits/mathinline.h: Use __asm instead of asm.
